# avalon

./: .gitignore  Cargo.toml  init.sql  initdb.sh
migrations/: 0001_users_table.sql  0002_devices_table.sql  0003_credentials_table.sql
src/: controllers.rs  crypto.rs  db.rs  errors.rs  main.rs  middleware.rs  models.rs
