[package]
name = "avalon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
ed25519-dalek = { version = "2.0.0", features = ["rand_core", "pkcs8", "pem"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.108"
tracing = "0.1.40"
error-stack = "0.4.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-http = { version = "0.5.0", features = ["trace"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "macros" ] }
dotenv = "0.15.0"
chrono = "0.4.31"
uuid = "1.6.1"
tower = "0.4.13"
