[package]
name = "avalon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
ed25519-dalek = { version = "2.0.0", features = ["rand_core", "pkcs8", "pem"] }
argon2 = "0.5.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.108"
tracing = "0.1.40"
error-stack = "0.4.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-http = { version = "0.5.0", features = ["trace"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "macros" ] }
dotenv = "0.15.0"
chrono = "0.4.31"
uuid = { version = "1.6.1", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
tower = "0.4.13"
jsonwebtoken = "9.2.0"
